--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,9 +4,15 @@
 /dist
 /tmp
 /out-tsc
+/.angular/cache
+# Only exists if Bazel was run
+/bazel-out
 
 # dependencies
 /node_modules
+
+# profiling files
+chrome-profiler-events*.json
 
 # IDEs and editors
 /.idea
@@ -23,6 +29,7 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.history/*
 
 # misc
 /.sass-cache
@@ -33,6 +40,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+!package-lock.json
 
 # System Files
 .DS_Store
