--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,47 +1,27 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# Exclusion des dépendences du projet. Elles peuvent être regénérées
+# automatiquement.
+.nyc_output/
+node_modules/
+false/
 
-# compiled output
-/dist
-/tmp
-/out-tsc
-/.angular/cache
-# Only exists if Bazel was run
-/bazel-out
+# Exclusion des fichiers Javascripts
+out/
 
-# dependencies
-/node_modules
-
-# profiling files
-chrome-profiler-events*.json
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
+# NPM Debug Log
 npm-debug.log
-yarn-error.log
-testem.log
-/typings
-!package-lock.json
 
-# System Files
-.DS_Store
-Thumbs.db
+##Typescrit compilation ##
+
+*.js.map
+*.js
+
+
+# Garder les fichiers necessaires pour les tests
+!systemjs.config.js
+!karma.conf.js
+!karma-test-shim.js
+!systemjs.config.extras.js
+!tsconfig.app.json
+!tsconfig.spec.json
+!tsconfig.json
+!package-lock.json
